examples/datalog/33_meta/31_explain_command.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_explain
Knowledge graph 'test_explain' created.
Switched to knowledge graph: test_explain
> .kg use test_explain
Switched to knowledge graph: test_explain
> +data[(1, "a"), (2, "b")].
Inserted 2 fact(s) into 'data'.
> derived(X, Y) :- data(X, Y).
2 rows:
  (1, "a")
  (2, "b")
(session: 1 rule(s))
> .explain derived
Script error: Parse error: Unknown meta command: .explain
